a few styling fixes for callouts and cropping UI

--- a/app/assets/stylesheets/tenon/ui/asset-cropping.css.scss
+++ b/app/assets/stylesheets/tenon/ui/asset-cropping.css.scss
@@ -40,7 +40,7 @@
         margin: 2px 10px 0 0;
 
         &:before {
-          margin-right: 5px;
+          margin-left: 5px;
         }
       }
     }
